--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,6 @@
 <body class="events-page">
+
+<div class="off-canvas">
 <%= render 'events/nav_bar' %>
 
 <!-- Events Listing Container-->
@@ -57,6 +59,8 @@
 </div>
 <div id="filtered_events">
 	<%= render "events/events" %>
+</div>
+
 </div>
 <!-- End of Event Listing container -->
 
