--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -113,7 +113,7 @@
   }
 
 </style>
-
+<div class="off-canvas">  
 <%= render 'events/nav_bar' %>
 
 <div data-role="main" class="container-fluid content ui-content">
@@ -136,6 +136,7 @@
   <% end %>
 </div>
 <!-- End of Event Listing container -->
+</div> <!-- /.off-canvas -->
 
 <script>
 $(".glyphicon-star.index").click(function(){
