add placeholder categories to filter nav

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -142,17 +142,32 @@
           <ul class="nav__item__content">
             <li class="nav__item">
               <%= link_to(events_path, :class => "nav__item__title") do %>
-                Category 1
+                Professional
               <% end %>
             </li>
             <li class="nav__item">
               <%= link_to(events_path, :class => "nav__item__title") do %>
-                Category 2
+                Education
               <% end %>
             </li>
             <li class="nav__item">
               <%= link_to(events_path, :class => "nav__item__title") do %>
-                Category 3
+                Tech
+              <% end %>
+            </li>
+            <li class="nav__item">
+              <%= link_to(events_path, :class => "nav__item__title") do %>
+                Jobs
+              <% end %>
+            </li>
+            <li class="nav__item">
+              <%= link_to(events_path, :class => "nav__item__title") do %>
+                Online
+              <% end %>
+            </li>
+            <li class="nav__item">
+              <%= link_to(events_path, :class => "nav__item__title") do %>
+                Networking
               <% end %>
             </li>
           </ul>
