--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -25,17 +25,7 @@
           <ul class="nav__item__content">
             <li class="nav__item">
               <%= link_to(events_path, :class => "nav__item__title") do %>
-                Events
-              <% end %>
-            </li>
-            <li class="nav__item">
-              <%= link_to(events_path, :class => "nav__item__title") do %>
-                Events
-              <% end %>
-            </li>
-            <li class="nav__item">
-              <%= link_to(events_path, :class => "nav__item__title") do %>
-                Events
+                Browse Events
               <% end %>
             </li>
           </ul>
@@ -47,17 +37,7 @@
           <ul class="nav__item__content">
             <li class="nav__item">
               <%= link_to(favorite_path, :class => "nav__item__title") do %>
-                Favorites 1
-              <% end %>
-            </li>
-            <li class="nav__item">
-              <%= link_to(favorite_path, :class => "nav__item__title") do %>
-                Favorites 2
-              <% end %>
-            </li>
-            <li class="nav__item">
-              <%= link_to(favorite_path, :class => "nav__item__title") do %>
-                Favorites 3
+                View My Favorites
               <% end %>
             </li>
           </ul>
