Add sorted by copy to event list page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,7 @@
 <div class="container-fluid content">
 	<div class="row row_filter">
 		<div class="column col-xs-12 text-center filters_column">
+			<span id="sort">Sorted by:   </span>
 			<div class="btn-group">
 				<div class="btn-group">
 
