--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -10,6 +10,10 @@ body.events-page {
     padding: 0;
   }
 
+  #sort {
+    padding-right: 5px;
+  }
+
   // ########## Events Page Filtering Buttons ##########
   button#today, button#tomorrow, button#weekend {
     width: auto !important;
